--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "monaco-editor": "^0.33.0",
+    "naive-ui": "^2.26.4",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.18.0",
     "utools-api-types": "^2.3.0",
     "vite": "^2.8.0",
     "vite-plugin-monaco-editor": "^1.0.10",
